mouse sulla barra dell'editor non nasconde la section toobox - dopo la copia di section / blocco restava visibile la relativa toobox - predisposto inserimento template ( da finire creando il template per i nuovi blocchi) - fix generazione ancora sui nuovi blocchi - fixato salvataggio dei blocchi vuoti

--- a/public/css/public.css
+++ b/public/css/public.css
@@ -4728,7 +4728,7 @@ a.pswp-item {
 .medium-editor-element:focus {
   outline: none; }
 
-.gridActive > .grid-stack-item:hover {
+.gridActive > .grid-stack-item.focused:hover {
   cursor: move; }
 
 .rexpansive_section .full-disposition.focused, .rexpansive_section .center-disposition.focused {
