--- a/public/scss/models/_builderL.scss
+++ b/public/scss/models/_builderL.scss
@@ -147,7 +147,7 @@
 .medium-editor-element:focus {
     outline: none;
 }
-.gridActive>.grid-stack-item:hover {
+.gridActive>.grid-stack-item.focused:hover {
     cursor: move;
 }
 
